@@ -27,6 +27,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to incognito - zytisin
 - bug #2163437 [core] Cannot disable PMA tables 
 - bug #2184240 [lang] Problems with Italian language file, thanks to Luca Rebellato
+- bug #2187193 [interface] ShowChgPassword setting not respected 
 
 3.0.0.0 (2008-09-27)
 + [export] properly handle line breaks for YAML, thanks to Dan Barry -
